--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+Authlib==1.6.0
 bcrypt==4.3.0
 blinker==1.9.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+cryptography==45.0.4
 dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.1
@@ -15,8 +20,12 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mysql-connector-python==9.3.0
+pycparser==2.22
 pyotp==2.9.0
+python-dotenv==1.1.0
+requests==2.32.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
+urllib3==2.5.0
 Werkzeug==3.1.3
 WTForms==3.2.1
