--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,10 @@ mysql-connector-python==9.3.0
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
+flask-talisman==1.0.0
+flask-wtf==1.2.1
+cryptography==42.0.5
+sqlalchemy-utils==0.41.1
+passlib==1.7.4
+python-dotenv==1.0.1
+flask-limiter==3.5.0
