--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.1
 Flask-Login==0.6.3
+Flask-Limiter==3.5.1
 Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
@@ -23,6 +24,8 @@ mysql-connector-python==9.3.0
 pycparser==2.22
 pyotp==2.9.0
 python-dotenv==1.1.0
+PyPDF2==3.0.1
+reportlab==4.2.0
 requests==2.32.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
