--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,14 @@ mysql-connector-python==9.3.0
 pycparser==2.22
 pyotp==2.9.0
 python-dotenv==1.1.0
+pytz==2025.2
+PyYAML==6.0.2
 requests==2.32.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
+ua-parser==1.0.1
+ua-parser-builtins==0.18.0.post1
 urllib3==2.5.0
+user-agents==2.2.0
 Werkzeug==3.1.3
 WTForms==3.2.1
