--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.4
+django-qrcode==0.3
 dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.1
@@ -20,11 +21,13 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mysql-connector-python==9.3.0
+pillow==11.3.0
 pycparser==2.22
 pyotp==2.9.0
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
+qrcode==8.2
 requests==2.32.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
