--- a/requirements.txt
+++ b/requirements.txt
@@ -7,28 +7,41 @@ charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.4
+defusedxml==0.7.1
+Deprecated==1.2.18
 django-qrcode==0.3
 dnspython==2.7.0
 email_validator==2.2.0
 Flask==3.1.1
+Flask-Limiter==3.5.0
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.2
+fonttools==4.59.0
+fpdf2==2.8.3
 greenlet==3.2.2
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+limits==5.4.0
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 mysql-connector-python==9.3.0
+ordered-set==4.1.0
+packaging==25.0
 pillow==11.3.0
 pycparser==2.22
+Pygments==2.19.2
 pyotp==2.9.0
+PyPDF2==3.0.1
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 qrcode==8.2
 requests==2.32.4
+rich==13.9.4
 SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 ua-parser==1.0.1
@@ -36,6 +49,6 @@ ua-parser-builtins==0.18.0.post1
 urllib3==2.5.0
 user-agents==2.2.0
 Werkzeug==3.1.3
+wrapt==1.17.2
 WTForms==3.2.1
 zxcvbn==4.4.28
-Flask-Limiter==3.5.0
